--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-    <head></head>
+    <head>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+    </head>
     <body>
         <div id="root"></div>
     </body>
